--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+  <ol>
+    <li>Test 1</li>
+    <li>Test 2</li>
+    <li>Test 3</li>
+  </ol>
 </body>
 </html>
